--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <title>Wordle</title>
 </head>
+
 <body>
-    <div class="content">
+    <div class="container">
         <div class="title">
             <span>W</span>
             <span>O</span>
@@ -17,6 +21,15 @@
             <span>D</span>
             <span>L</span>
             <span>E</span>
+        </div>
+
+        <div style="margin-top: 30px;">
+            <p style="margin: 0; padding: 0; color: #606360;">Instruções de jogo.
+                <a type="button" style="text-decoration: underline; font-weight: bold;" data-bs-toggle="modal"
+                    data-bs-target="#exampleModal">
+                    Clique aqui!
+                </a>
+            </p>
         </div>
 
         <div class="lines">
@@ -61,7 +74,50 @@
                 <span><input type="text" id="l5-6" linha="5" posicao="6" class="txt-input" maxlength="1"></span>
             </div>
         </div>
+
+        <div class="alert alert-success hide" role="alert" id="dvSucesso"></div>
+        <div class="alert alert-danger hide" role="alert" id="dvFalha"></div>
+
+        <div>
+            <p>Desenvolvido por <a target="_blank" href="https://instagram.com/juniorsouzc">@juniorsouzc</a></p>
+            <a href="https://instagram.com/juniorsouzc" target="_blank"><i style="font-size: 25px; margin-right: 15px;"
+                    class="bi bi-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/fabricio-j-869b7a13b/" target="_blank"><i
+                    style="font-size: 25px; margin-right: 15px;" class="bi bi-linkedin"></i></a>
+            <a href="https://www.twitter.com/juniorsouzac_" target="_blank"><i
+                    style="font-size: 25px; margin-right: 15px;" class="bi bi-twitter"></i></a>
+        </div>
+
     </div>
+
+
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel" style="color: black;">Instruções de Jogo</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body" style="color: black !important;">
+                    Bem vindo ao WORLDE! <br>
+                    Neste jogo você deve adivinhar uma palavra de 6 letras, que será gerada aleatoriamente em 5
+                    tentativas. <br>
+                    <br>
+                    Para cada letra <strong style="color: black !important;">correta</strong> será indicado na cor
+                    <strong style="color: black !important;">laranja</strong> <br>
+                    Para cada letra <strong style="color: black !important;">correta e na posição correta</strong> será
+                    indicado na cor <strong style="color: black !important;">verde</strong>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
+<script src="palavras.js"></script>
 <script src="script.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+
 </html>
